observability/otel/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: otel-grpc
  namespace: observability
  labels:
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`otel.lab`)
      services:
        - name: otel-collector
          port: 4317
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otel-http
  namespace: observability
  labels:
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`otel.lab`)
      kind: Rule
      services:
        - name: otel-collector
          port: 4318
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: traefik
